--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Cidade Dorme</title>
+	</head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cidade Dorme</title>
-</head>
-
-<body>
-  <div>Em breve :)</div>
-</body>
-
+	<body>
+		<div>Em breve :)</div>
+	</body>
 </html>
