✨ | feat: add header

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 	</head>
 
 	<body>
-		<div>Em breve :)</div>
+		<header id="app-header">
+			<h1 id="app-title">Cidade Dorme</h1>
+		</header>
 	</body>
 </html>
