✨ | feat: add pages

--- a/app/rooms-new.html
+++ b/app/rooms-new.html
@@ -11,15 +11,21 @@
 			rel="stylesheet"
 		/>
 
-		<link rel="stylesheet" href="styles/reset.css" />
-		<link rel="stylesheet" href="styles/style.css" />
+		<link rel="stylesheet" href="../styles/reset.css" />
+		<link rel="stylesheet" href="../styles/style.css" />
 
-		<title>Cidade Dorme</title>
+		<title>Criar Sala</title>
 	</head>
 
 	<body>
 		<header id="app-header">
 			<h1 id="app-title">Cidade Dorme</h1>
+
+			<nav>
+				<a href="index.html">Salas</a>
+				<a href="rooms-new.html">Criar sala</a>
+				<a href="login.html">Sair</a>
+			</nav>
 		</header>
 	</body>
 </html>
