✨ | feat: update index.html header

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
 
 			<nav>
 				<a href="index.html">Salas</a>
-				<a href="rooms-new.html">Criar sala</a>
+				<a href="new-room.html">Criar sala</a>
 				<a href="login.html">Sair</a>
 			</nav>
 		</header>
