✨ | feat: update page's titles

--- a/app/new-room.html
+++ b/app/new-room.html
@@ -15,7 +15,7 @@
 		<link rel="stylesheet" href="../styles/style.css" />
 		<link rel="stylesheet" href="../styles/pages/new-room.css" />
 
-		<title>Criar Sala</title>
+		<title>Criar Sala | Cidade Dorme</title>
 	</head>
 
 	<body onload="methods.loadRooms()">
