--- a/app/room.html
+++ b/app/room.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" href="../styles/reset.css" />
 		<link rel="stylesheet" href="../styles/style.css" />
 
-		<title>Sala</title>
+		<title>Sala | Cidade Dorme</title>
 	</head>
 
 	<body>
