--- a/app/login.html
+++ b/app/login.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" href="../styles/reset.css" />
 		<link rel="stylesheet" href="../styles/style.css" />
 
-		<title>Login</title>
+		<title>Login | Cidade Dorme</title>
 	</head>
 
 	<body>
